2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_fixed_height_mode): Add a 
	note about COLUMN_FIXED restriction.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_list_button_press): 
	Set the entry in the default handler of the ::match-selected signal.
	(#137226)

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position_below): If we don't
	do the move-selected-item below pointer thingie, do the 
	place-below-or-above one.

	* tests/testentrycompletion.c: Make the second example use the 
	::match-selected signal to make it actually work.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): 
	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Use hover selection
	mode.  (#127648, Dave Bordoley)

	* gtk/gtktreeview.h:
	* gtk/gtktreeview.c: Add a new property "hover_selection", which 
	when TRUE makes the selection follow the mouse. Also add setter
	and getter for the fixed_height property.

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_popup) 
	(gtk_combo_box_menu_button_press): Make sure the menu pops up
	as wide as the combobox.  (#59660, Havoc Pennington)

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.h: 
	* gtk/gtkcombobox.c: Support tearoffable combo boxes (in menu 
	mode). Add a new property, add-tearoffs, for this.  (#135956)

	* gtk/gtkfontsel.c (list_row_activated): Make Return activate the
	default button.  (#118921)

Mon May 10 15:03:50 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.c (_gtk_widget_grab_notify): New internal function
	that emits the grab notify signal.
	
	* gtk/gtkmain.c (gtk_grab_notify_foreach): Use it here.

Mon May 10 00:48:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenu.c: Make destruction of a torn off menu work 
	like un-tearing off.

Sun May  9 21:05:38 2004  Matthias Clasen  <maclas@gmx.de>

        Merge from 2.4:

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 